[gd_scene load_steps=14 format=3 uid="uid://i38s3oi3ps1p"]

[ext_resource type="Script" uid="uid://ct03ulsv4nxjj" path="res://Scripts/mode_selection.gd" id="1_0stg0"]
[ext_resource type="Texture2D" uid="uid://c21kxv2b75xcw" path="res://Arts/bground.png" id="1_md2x6"]
[ext_resource type="FontFile" uid="uid://k6eislu03nr7" path="res://VCR_OSD_MONO_1.001.ttf" id="2_0stg0"]
[ext_resource type="FontFile" uid="uid://b7bitc51u2r1i" path="res://Arts/VCR_OSD_MONO_1.001.ttf" id="3_k2b3x"]
[ext_resource type="Texture2D" uid="uid://bvuofg0we66i5" path="res://Arts/pvpbattle_button.png" id="4_khia2"]
[ext_resource type="Texture2D" uid="uid://dpqxqh8pkrt41" path="res://Arts/adventuretutorial_button.png" id="5_neb46"]
[ext_resource type="Texture2D" uid="uid://x0q2umhmu0yo" path="res://Arts/stonebutton.png" id="6_vi2ah"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w5hl6"]
texture = ExtResource("1_md2x6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iee2v"]
texture = ExtResource("4_khia2")
expand_margin_top = 10.0
expand_margin_bottom = 15.0
region_rect = Rect2(95.18686, 39.068325, 129.62993, 37.86746)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6x34e"]
texture = ExtResource("5_neb46")
expand_margin_left = 20.0
expand_margin_top = 10.0
expand_margin_right = 160.0
expand_margin_bottom = 15.0
region_rect = Rect2(95.187, 39.068, 129.63, 37.867)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5bgqh"]
texture = ExtResource("6_vi2ah")
expand_margin_left = 15.0
expand_margin_top = 10.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0
region_rect = Rect2(67, 53.5, 186, 73)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0stg0"]
texture = ExtResource("6_vi2ah")
expand_margin_left = 15.0
expand_margin_top = 10.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0
region_rect = Rect2(67, 53.5, 186, 73)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k2b3x"]
texture = ExtResource("6_vi2ah")
expand_margin_left = 15.0
expand_margin_top = 10.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0
region_rect = Rect2(67, 53.5, 186, 73)

[node name="Mode Selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0stg0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_w5hl6")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -439.76086
offset_top = 1.0
offset_right = 439.23914
offset_bottom = 256.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_0stg0")
theme_override_font_sizes/font_size = 105
text = "SELECT YOUR PATH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PVP" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -509.0
offset_top = 8.0
offset_right = -73.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/font_focus_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/font_pressed_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/font_hover_pressed_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/icon_focus_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/icon_pressed_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/icon_hover_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_k2b3x")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_iee2v")
theme_override_styles/pressed = SubResource("StyleBoxTexture_iee2v")
theme_override_styles/hover = SubResource("StyleBoxTexture_iee2v")
theme_override_styles/disabled = SubResource("StyleBoxTexture_iee2v")
text = "PVP BATTLE"

[node name="Adventure" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -594.0
offset_top = 8.0
offset_right = -224.0
offset_bottom = 70.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.8403968, 0.7240328, 0.5310369, 1)
theme_override_colors/font_focus_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/font_pressed_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/font_hover_pressed_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/icon_focus_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/icon_pressed_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/icon_hover_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.8392157, 0.7254902, 0.5294118, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_k2b3x")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_6x34e")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6x34e")
theme_override_styles/hover = SubResource("StyleBoxTexture_6x34e")
theme_override_styles/disabled = SubResource("StyleBoxTexture_6x34e")
text = "ADVENTURE TUTORIAL"

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_top = -104.0
offset_right = 231.0
offset_bottom = -73.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/font_focus_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/font_pressed_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/icon_focus_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/icon_hover_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_0stg0")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_5bgqh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0stg0")
theme_override_styles/hover = SubResource("StyleBoxTexture_5bgqh")
theme_override_styles/disabled = SubResource("StyleBoxTexture_5bgqh")
text = "SETTINGS"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 922.0
offset_top = -104.0
offset_right = 1063.0
offset_bottom = -73.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/font_focus_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/font_pressed_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/icon_focus_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/icon_hover_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 0.7019608, 0.2627451, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_0stg0")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_5bgqh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k2b3x")
theme_override_styles/hover = SubResource("StyleBoxTexture_5bgqh")
theme_override_styles/disabled = SubResource("StyleBoxTexture_5bgqh")
text = "BACK"

[connection signal="pressed" from="PVP" to="." method="_on_pvp_pressed"]
[connection signal="pressed" from="Adventure" to="." method="_on_adventure_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
